--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
+# Compiled class files
 *.class
+
+# Log files
 *.log
-.idea/
-.vscode/
+
+# Maven
 target/
-bin/
-out/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+
+# IDE
+.idea/
+*.iml
+.vscode/
+.eclipse/
+.settings/
+.classpath
+.project
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# React Native
+.expo/
+.expo-shared/
+
+# Build
+dist/
+build/
