--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^7.8.1",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.28",
+    "axios": "^1.13.5",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
@@ -33,10 +34,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1"
   },
