--- a/backend/morphologie-api/pom.xml
+++ b/backend/morphologie-api/pom.xml
@@ -51,6 +51,11 @@
             <version>1.0.0</version>
         </dependency>
 
+       <dependency>
+    <groupId>me.paulschwarz</groupId>
+    <artifactId>spring-dotenv</artifactId>
+    <version>4.0.0</version>
+</dependency>
         <!-- Lombok (optionnel, pour réduire le boilerplate) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
